# visionir

./: .envrc  .gitignore  .pre-commit-config.yaml  test.txt.asc
.github/workflows/: cv-ci.yml  data-lake-ci.yml  mock.yml  observer-ci.yml  observer-pypi.yml  observer.yml  paychecks-ci.yml
apps/cv/: Dockerfile  compose.yaml  pyproject.toml
apps/cv/.devcontainer/: devcontainer.json
apps/cv/src/: explore.ipynb
apps/cv/src/integrations/wakatime/models/: user.py
apps/mock/: Dockerfile
apps/observer/: .dockerignore  .envrc  Dockerfile  compose.yaml  pyproject.toml
apps/observer/.devcontainer/: devcontainer.json
apps/paychecks/: Dockerfile  compose.yaml  pyproject.toml
apps/paychecks/.devcontainer/: devcontainer.json
apps/paychecks/app/project/: .pre-commit-config.yaml  pyproject.toml
apps/paychecks/app/src/: main.py
apps/paychecks/src/: logger.py  main.py  observability.py  pyro.py  test.py  utils.py
infra/: cloudflare.tf  local.tf  main.tf  oci.tf  variables.tf
infra/ansible/playbooks/: apt-sync.ansible  apt.ansible  docker-setup.ansible  git.ansible  minikube-setup.ansible  minikube.ansible  zsh-setup.ansible  zsh.ansible
infra/ansible/playbooks/ubuntu/: apt.ansible  cf-certs.ansible  docker.ansible  git.ansible  gpg.ansible  helm.ansible  minikube.ansible  nginx.ansible  ufw.ansible  zsh.ansible
infra/ansible/playbooks/ubuntu/oci/: mount_iscsci_block.ansible
infra/cloud/: cloudflare.tf  oci.tf
infra/cloud/terraform/: .envrc  cloudflare.tf  main.tf  oci.tf  variables.tf
infra/data-lake/: Dockerfile  compose.yaml  pyproject.toml
infra/data-lake/.devcontainer/: devcontainer.json
infra/data-lake/src/: polars_scheme_parser.py
infra/data-lake/src/integrations/wakatime/: client.py
infra/data-lake/src/integrations/wakatime/models/: user.py
infra/k8s/traefik/: tempvals.yaml
infra/k8s/traefik/helm-charts/: values.yaml
infra/minio/: compose.yaml
infra/monitoring/: compose.yaml
infra/observability/: compose.yaml  conf.alloy  mimir.yaml
infra/observability/conf-tools/: grafana.yaml
infra/scripts/: start_minikube.sh
infra/terraform/: README.md  aws.tf  cloudflare.tf  github.tf  local.tf  main.tf  oci.tf  sendgrid.tf  variables.tf
