[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["Nir Abutbul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
polars = "^0.20.16"
jupyter = "^1.0.0"
datamodel-code-generator = "^0.25.5"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
