[tool.poetry]
name = "visionir-io/observer"
version = "0.1.0"
description = "Observer class for logging and pyroscope-app"
authors = ["Nir Abutbul <nir@visionir.io>"]
readme = "/visionir-io/observer/README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.observers.dependencies]
pyroscope-io = "^0.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
