[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["Nir Abutbul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
polars = "^0.20.16"
jupyter = "^1.0.0"
datamodel-code-generator = "^0.25.5"
pydantic = "^2.6.4"
deltalake = "^0.16.3"
pyarrow = "^15.0.2"
s3fs = "^2024.3.1"
pandas = "^2.2.1"
msgspec = "^0.18.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
