[tool.poetry]
name = "paychecks"
version = "0.1.0"
description = ""
authors = ["Nir Abutbul"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "^1.32.2"
ruff = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 89
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "single"
